Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-06-18 (SVN):
    * gl_vidnt.c: Fixed dynamic loading of glGetTexParameterfv().

2012-06-18 (SVN):
    * snd_vorbis.c: Set initialization success for MorphOS.

2012-06-18 (SVN):
    * Makefiles: Commented out GL_LINK setting for AROS, not needed

2012-06-18 (SVN):
    * opengl: Dynamically load glGetTexParameterfv at runtime and skip
      the anisotropy driver-lock status if loading fails.

2012-06-18 (SVN):
    * cd_sdl.c, gl_vidsdl.c: Disabled the putenv() calls on MorphOS.

2012-06-18 (SVN):
    * Makefiles: Removed the -fexpensive-optimizations flag, gcc seems
      to enable it at -O2 and higher. Removed the -falign-* flags, which
      aren't really necessary. Removed the OPT_EXTRA makefile option,
      moved the -fomit-frame-pointer flag among main optimization flags.
      Made the MorphOS builds to link to opengl library at compile time
      i.e. set LINK_GL_LIBS to yes. Defined GL_LINK as -lGL for MorphOS
      and AROS builds.
    * oslibs/dos: Recompiled libmad.a and libwatt.a without adding the
      -falign-* flags.

2012-06-18 (SVN):
    * gl_vidsdl.c: Replaced setenv() calls with putenv().

2012-06-18 (SVN):
    * engine (all), sys_amiga.c: Use 2 MB stack for MorphOS.

2012-06-18 (SVN):
    * Makefiles: Added support for MorphOS.

2012-06-17 (SVN):
    * sys_amiga.c, cmdlib.c: Remove unnecessary devices/timer.h include.
      Fix the TimerBase type so that it works on other Amiga variants.
      Use tv_secs and tv_micro to access struct timeval members instead
      of tv_sec and tv_usec, for the same reasons.

2012-06-17 (SVN):
    * snd_vorbis.c: Adjusted to support MorphOS.

2012-06-17 (SVN):
    * gl_rsurf.c (DrawTextureChains): Remove an extra semicolon from the
      end of a for construct. An obvious old typo found by clang-3.1.

2012-06-17 (SVN):
    * oslibs/windows/scitech/x86/libmglfx.def: commented out all of the